--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title:            莫光权的GitHub博客
 description:      welcome to my blog.The blog is still biulding
-disqus_shortname: hpstrtheme
+disqus_shortname: blog
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url:http://moguangquan.github.io
+url:http://moguangquan.github.io/blog
 
 # Owner/author information
 owner:
