--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ owner:
   facebook:       
   github:         moguangquan
   stackexchange:  
-  linkedin:       profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button
+  linkedin:       ../profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button
   instagram:      
   flickr:         
   tumblr:         
