修改样式和site变量值

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            莫光权的GitHub博客
+title:            moguangquan-blog
 description:      welcome to my blog.The blog is still biulding
 disqus_shortname:      #disqus插件的简称
 reading_time:     true
