--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,7 @@ sass:
 permalink:   /:categories/:title/
 
 # Amount of post to show on home page
+paginate_path: "page:num"
 paginate: 3
 
 kramdown:
