--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,8 @@ timezone:    Asia/Shanghai
 future:      true
 highlighter: pygments
 markdown:    kramdown
-gems:
-  - jekyll-sitemap
-  - jekyll-paginate
+gems: [jekyll-sitemap,jekyll-paginate]
+
 sass:
   sass_dir: _sass
   style: compressed
