Revert "代码修改和分页功能测试"
This reverts commit 1072a97f838a3b4fc0b9f4c03fa1897f1c3c572c.

# Conflicts:
#	archives/index.html
#	assets/js/archives.js
#	posts/index.html
#	tags/index.html

--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,8 @@ sass:
 permalink:   /:categories/:title/
 
 # Amount of post to show on home page
+paginate_path: "/posts/page:num/"
 paginate: 3
-cate_paginate: 3
-tag_paginate: 3
 
 kramdown:
   auto_ids: true
