--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ permalink:   /:categories/:title/
 paginate: 3
 
 kramdown:
+  input: GFM
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
@@ -64,6 +65,7 @@ kramdown:
   coderay:
     coderay_line_numbers: nil
     coderay_line_numbers_start: 1
+    coderay_tab_width: 4
     coderay_bold_every: 10
     coderay_css: class
 
