--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ bing_verify:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Shanghai
 future:      true
+highlighter: pygments
 markdown:    kramdown
 gems: [jekyll-paginate, jekyll-gist]
 sass:
@@ -54,14 +55,11 @@ paginate: 3
 
 kramdown:
   input: GFM
-  syntax_highlighter: rouge
   use_coderay: true
+  syntax_highlighter: rouge
 
   coderay:
     coderay_line_numbers: nil
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: class
+
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
