--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,10 @@ bing_verify:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Shanghai
 future:      true
+highlighter: pygments
 markdown:    kramdown
-gems: [jekyll-paginate, jekyll-gist]
+gems:
+  - jekyll-sitemap
 sass:
   sass_dir: _sass
   style: compressed
@@ -54,11 +56,6 @@ paginate: 3
 
 kramdown:
   input: GFM
-  use_coderay: true
-  syntax_highlighter: rouge
-
-  coderay:
-    coderay_line_numbers: nil
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
