--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,10 @@ kramdown:
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..6
+  syntax_highlighter: rouge
   enable_coderay: true
 coderay:
-    coderay_line_numbers:  inline
+    coderay_line_numbers: inline
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
