--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ reading_time:     true
 words_per_minute: 30
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: http://moguangquan.github.io/blog
+url: https://moguangquan.github.io/blog
 
 disqus_shortname:  moguangquan    #disqus插件的简称
 uyan_shortname:        #uyan插件的简称
